# reid-microservices

./: .gitignore  Makefile  README.md  requirements.txt
src/edge/: .dockerignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  run.sh  yolo.py
src/edge/benchmark/: CMakeLists.txt  Dockerfile  benchmark.cpp
src/edge/src/: __main__.py  test.py  yolo.py
src/edge/src/tests/: test_image_quality.py
src/edge/weights/best_openvino_model/: best.xml  metadata.yaml
src/edge/weights/yolo11n_openvino_model/: metadata.yaml
src/feature_extraction/: Dockerfile  Makefile  README.md  main.py  pyproject.toml  test.py
src/feature_extraction/src/assets/models/osnet/: osnet.py
src/feature_extraction/src/tests/: test_comparison.py  test_lightmbn.py
src/identity_storage/: .env.example  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/identity_storage/src/: __init__.py  __main__.py  identity_storage.py  schema.py
src/kafka/: .env.example  README.md  docker-compose.yaml  gen_kafka_compose.py  init-topics.sh
src/model_serving/: .dockerignore  Dockerfile  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/model_serving/src/: main.py
src/model_serving/src/models/: efficientnet.py  lightmbn_n.py  osnet.py
src/model_serving/src/tests/: performance_test.py  run_performance_tests.py  test_dynamic_batching.py  test_efficientnet.py  test_local.py  test_ray.py  test_replica_comparison.py
src/server/: .env.example  .env.xample  README.md  pyproject.toml  requirements.txt  start.sh
src/server/src/: __main__.py  apis.py  consumer.py  consumers.py  embeddings.py  models.py  schemas.py  streaming.py
src/server/src/configs/: output.avsc  schema.avsc
src/server/src/trackers/: __init__.py  basetrack.py  bot_sort.py  byte_tracker.py
src/server/src/trackers/utils/: gmc.py  kalman_filter.py  matching.py
src/server/src/utils/: logger.py  ops.py
src/streaming/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
src/streaming/src/: __main__.py  core.py
src/streaming/src/utils/: logger.py
src/ui/: Dockerfile  README.md  package.json  pnpm-lock.yaml
src/ui/src/app/: layout.tsx  page.tsx
src/ui/src/components/: device.tsx
src/ui/src/types/: index.ts
