[project]
name = "edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka>=1.3.5",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.115",
]


[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "ruff>=0.11.5",
]
