[project]
name = "edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "avro-python3>=1.10.2",
    "kafka-python>=2.2.0",
    "markupsafe<3.0.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.1",
    "onnxslim>=0.1.50",
    "opencv-python>=4.11.0.86",
    "openvino>=2025.1.0",
    "python-dotenv>=1.1.0",
    "ultralytics>=8.3.115",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "ruff>=0.11.5",
]
