[project]
name = "feature-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.22.0",
    "markupsafe>=2.1.0,<3.0.0",
    "rich>=14.0.0",
    "ray[serve]>=2.46.0",
    "huggingface-hub[cli]>=0.31.1",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
]


[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "deptry>=0.23.0",
    "ruff>=0.11.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
