[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "avro-python3>=1.10.2",
    "kafka-python>=2.2.7",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
]


[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "ruff>=0.11.5",
]
